// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a forbidClick toast 1`] = `
<transition-stub name="r-fade"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div role="dialog"
       tabindex="0"
       class="r-popup r-popup--center r-toast r-toast--middle r-toast--success"
       style="z-index: 2004;"
  >
    <i class="r-badge__wrapper r-icon r-icon-success r-toast__icon">
    </i>
  </div>
</transition-stub>
`;

exports[`should render message slot correctly 1`] = `
<transition-stub name="r-fade"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div role="dialog"
       tabindex="0"
       class="r-popup r-popup--center r-toast r-toast--middle r-toast--text"
       style="z-index: 2007;"
  >
    <div class="r-toast__text">
      Custom Message
    </div>
  </div>
</transition-stub>
`;
